--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,26 @@ body {
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
+    
 }
 
 #container h1 {
     font-size: 20px;
+}
+
+#cabecera {
+    background: #33a;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.5);
+}
+#cabecera #tagline {
+    padding: 1em 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+#post {
+    padding: 0.1em;
 }
