--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ body {
     font-weight: bold;
     box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.5);
 }
+#cabecera #logo_header {
+    width: 40px;
+    vertical-align: middle;
+}
 #cabecera #tagline {
     padding: 1em 0 0 0 1em;
     font-weight: normal;
@@ -35,4 +39,5 @@ body {
 }
 #post {
     padding: 0.1em;
+    background-color: white;
 }
